Scrollbar fix for new algebra input
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39583 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -57,7 +57,7 @@
 	bottom: 0px;
 	left:0px;
 	right:0px;
-	height: 22px;
+	height: 17px;
 	width: 100%;
 
 	/* on mobile browsers z-index is needed for whatever reason */
